force-app/main/default/objects/HAM_Group_Post__c/HAM_Group_Post__c.object-meta.xml
<CustomObject>
    <description>Stores posts related to each individual group</description>
    <label>HAM Group Post</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>HAM Group Post Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HAM Group Posts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>