force-app/main/default/objects/HAM_Group_Post__c/fields/Amplified_On__c.field-meta.xml
<CustomField>
    <fullName>Amplified_On__c</fullName>
    <label>Amplified On</label>
    <type>DateTime</type>
</CustomField>