force-app/main/default/objects/HAM_Group_Post__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Author</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HAM Group Posts</relationshipLabel>
    <relationshipName>HAM_Group_Posts</relationshipName>
    <type>Lookup</type>
</CustomField>