force-app/main/default/objects/HAM_Group_Post__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>HAM Group</label>
    <referenceTo>HAM_Group__c</referenceTo>
    <relationshipLabel>HAM Group Posts</relationshipLabel>
    <relationshipName>HAM_Group_Posts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>