force-app/main/default/objects/HAM_Group_Post__c/fields/Ham_Admin_Action__c.field-meta.xml
<CustomField>
    <fullName>Ham_Admin_Action__c</fullName>
    <label>Ham Admin Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warn the user</fullName>
            </value>
            <value>
                <fullName>Delete the content</fullName>
            </value>
            <value>
                <fullName>Remove content &amp; Block user</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>