force-app/main/default/objects/HAM_Group_Post__c/fields/Is_Amplified__c.field-meta.xml
<CustomField>
    <fullName>Is_Amplified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Amplified</label>
    <type>Checkbox</type>
</CustomField>