force-app/main/default/objects/HAM_Group_Post__c/fields/Is_Anonymous__c.field-meta.xml
<CustomField>
    <fullName>Is_Anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Anonymous</label>
    <type>Checkbox</type>
</CustomField>