force-app/main/default/objects/HAM_Group_Post__c/fields/Is_Draft__c.field-meta.xml
<CustomField>
    <fullName>Is_Draft__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True while a post is being composed and files are being attached via lightning-file-upload. Draft posts are excluded from the feed until published.</description>
    <label>Is Draft</label>
    <type>Checkbox</type>
</CustomField>